--- a/src/sample/View/loginForm.fxml
+++ b/src/sample/View/loginForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -22,7 +23,7 @@
             <Label layoutX="10.0" layoutY="10.0" text="USERNAME" />
             <TextField fx:id="userNameField" promptText="TYPE YOUR USERNAME" />
             <Label layoutX="10.0" layoutY="27.0" text="PASSWORD" />
-            <TextField fx:id="passwordField" layoutX="10.0" layoutY="44.0" promptText="TYPE YOUR PASSWORD" />
+            <PasswordField fx:id="passwordField" promptText="TYPE YOUR PASSWORD" />
          </children>
       </VBox>
       <HBox alignment="CENTER_RIGHT" layoutX="100.0" layoutY="310.0" prefHeight="25.0" prefWidth="200.0" spacing="15.0">
