--- a/src/sample/View/dashboard.fxml
+++ b/src/sample/View/dashboard.fxml
@@ -4,10 +4,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="700.0" prefWidth="614.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.dashboardController">
    <children>
@@ -68,5 +68,7 @@
          </font>
       </Label>
       <Button fx:id="exit" layoutX="523.0" layoutY="643.0" mnemonicParsing="false" onAction="#onExit" text="EXIT" />
+      <TextField fx:id="customerSearch" layoutX="413.0" layoutY="29.0" onAction="#onCustomerSearch" promptText="SEARCH" />
+      <TextField fx:id="appointmentSearch" layoutX="413.0" layoutY="338.0" onAction="#onAppointmentSearch" promptText="SEARCH" />
    </children>
 </AnchorPane>
