--- a/src/sample/View/dashboard.fxml
+++ b/src/sample/View/dashboard.fxml
@@ -68,7 +68,7 @@
          </font>
       </Label>
       <Button fx:id="exit" layoutX="523.0" layoutY="643.0" mnemonicParsing="false" onAction="#onExit" text="EXIT" />
-      <TextField fx:id="customerSearch" layoutX="413.0" layoutY="29.0" onAction="#onCustomerSearch" promptText="SEARCH" />
-      <TextField fx:id="appointmentSearch" layoutX="413.0" layoutY="338.0" onAction="#onAppointmentSearch" promptText="SEARCH" />
+      <TextField fx:id="customerSearch" layoutX="291.0" layoutY="29.0" onAction="#onCustomerSearch" prefHeight="25.0" prefWidth="271.0" promptText="SEARCH" />
+      <TextField fx:id="appointmentSearch" layoutX="291.0" layoutY="338.0" onAction="#onAppointmentSearch" prefHeight="25.0" prefWidth="271.0" promptText="SEARCH" />
    </children>
 </AnchorPane>
