--- a/src/sample/View/addAppointmentForm.fxml
+++ b/src/sample/View/addAppointmentForm.fxml
@@ -40,10 +40,10 @@
       </VBox>
       <VBox layoutX="465.0" layoutY="27.0" prefHeight="221.0" prefWidth="130.0" spacing="40.0">
          <children>
-            <ComboBox fx:id="contactBox" onAction="#onContactCombo" prefWidth="150.0" />
+            <ComboBox fx:id="contactCombo" onAction="#onContactCombo" prefWidth="150.0" />
             <DatePicker fx:id="datePicker" onAction="#onDatePicker" />
-            <ComboBox fx:id="startBox" onAction="#onStartBox" prefWidth="150.0" />
-            <ComboBox fx:id="endBox" layoutX="10.0" layoutY="60.0" onAction="#onEndBox" prefWidth="150.0" />
+            <ComboBox fx:id="startCombo" onAction="#onStartCombo" prefWidth="150.0" />
+            <ComboBox fx:id="endCombo" layoutX="10.0" layoutY="60.0" onAction="#onEndCombo" prefWidth="150.0" />
          </children>
       </VBox>
       <Button fx:id="exit" layoutX="345.0" layoutY="287.0" mnemonicParsing="false" onAction="#onExit" text="EXIT" />
