--- a/src/sample/View/loginForm.fxml
+++ b/src/sample/View/loginForm.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.logInController">
    <children>
-      <Label fx:id="regionLabel" layoutX="358.0" layoutY="14.0" text="Label" />
+      <Label fx:id="zoneLabel" layoutX="358.0" layoutY="28.0" text="Label" />
       <VBox layoutX="100.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" spacing="15.0">
          <children>
             <Label fx:id="welcomeLabel" text="Welcome!">
@@ -31,5 +31,6 @@
             <Button fx:id="exitButton" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onExit" text="EXIT" />
          </children>
       </HBox>
+      <Label fx:id="languageLabel" layoutX="358.0" layoutY="14.0" text="Label" />
    </children>
 </AnchorPane>
