--- a/src/sample/View/addAppointmentForm.fxml
+++ b/src/sample/View/addAppointmentForm.fxml
@@ -14,7 +14,7 @@
       <Button fx:id="save" layoutX="267.0" layoutY="287.0" mnemonicParsing="false" onAction="#onSave" text="SAVE" />
       <VBox layoutX="126.0" layoutY="27.0" prefHeight="200.0" prefWidth="193.0" spacing="25.0">
          <children>
-            <ComboBox fx:id="customerCombo" onAction="#onCustomerCombo" prefWidth="150.0" />
+            <ComboBox fx:id="customerCombo" prefWidth="150.0" />
             <TextField fx:id="titleField" />
             <TextField fx:id="descriptionField" layoutX="10.0" layoutY="35.0" />
             <TextField fx:id="locationField" layoutX="10.0" layoutY="60.0" />
@@ -30,7 +30,7 @@
             <Label layoutX="10.0" layoutY="61.0" text="TYPE" />
          </children>
       </VBox>
-      <VBox layoutX="371.0" layoutY="27.0" prefHeight="225.0" prefWidth="100.0" spacing="50.0">
+      <VBox layoutX="399.0" layoutY="27.0" prefHeight="225.0" prefWidth="100.0" spacing="50.0">
          <children>
             <Label text="CONTACT" />
             <Label layoutX="10.0" layoutY="10.0" text="DATE" />
@@ -40,10 +40,10 @@
       </VBox>
       <VBox layoutX="465.0" layoutY="27.0" prefHeight="221.0" prefWidth="130.0" spacing="40.0">
          <children>
-            <ComboBox fx:id="contactCombo" onAction="#onContactCombo" prefWidth="150.0" />
-            <DatePicker fx:id="datePicker" onAction="#onDatePicker" />
-            <ComboBox fx:id="startCombo" onAction="#onStartCombo" prefWidth="150.0" />
-            <ComboBox fx:id="endCombo" layoutX="10.0" layoutY="60.0" onAction="#onEndCombo" prefWidth="150.0" />
+            <ComboBox fx:id="contactCombo" prefWidth="150.0" />
+            <DatePicker fx:id="datePicker" />
+            <ComboBox fx:id="startCombo" prefWidth="150.0" />
+            <ComboBox fx:id="endCombo" layoutX="10.0" layoutY="60.0" prefWidth="150.0" />
          </children>
       </VBox>
       <Button fx:id="exit" layoutX="345.0" layoutY="287.0" mnemonicParsing="false" onAction="#onExit" text="EXIT" />
