--- a/src/sample/View/updateAppointmentForm.fxml
+++ b/src/sample/View/updateAppointmentForm.fxml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.Controller.updateCustomerController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.updateAppointmentController">
+    <children>
+        <Button fx:id="save" layoutX="267.0" layoutY="326.0" mnemonicParsing="false" onAction="#onSave" text="SAVE" />
+        <VBox layoutX="126.0" layoutY="27.0" prefHeight="200.0" prefWidth="193.0" spacing="25.0">
+            <children>
+                <ComboBox fx:id="customerCombo" prefWidth="150.0" />
+                <TextField fx:id="appointmentIDField" disable="true" />
+                <TextField fx:id="titleField" layoutX="10.0" layoutY="35.0" />
+                <TextField fx:id="descriptionField" layoutX="10.0" layoutY="60.0" />
+                <TextField fx:id="locationField" />
+            <TextField fx:id="typeField" layoutX="10.0" layoutY="60.0" />
+            </children>
+        </VBox>
+        <VBox layoutX="32.0" layoutY="27.0" prefHeight="200.0" prefWidth="82.0" spacing="34.0">
+            <children>
+                <Label text="CUSTOMER" />
+                <Label layoutX="10.0" layoutY="10.0" text="APPT ID" />
+                <Label layoutX="10.0" layoutY="27.0" text="TITLE" />
+                <Label layoutX="10.0" layoutY="44.0" text="DESCRIPTION" />
+                <Label layoutX="10.0" layoutY="61.0" text="LOCATION" />
+            <Label layoutX="10.0" layoutY="10.0" text="TYPE" />
+            </children>
+        </VBox>
+        <VBox layoutX="371.0" layoutY="27.0" prefHeight="225.0" prefWidth="100.0" spacing="50.0">
+            <children>
+                <Label text="CONTACT" />
+                <Label layoutX="10.0" layoutY="10.0" text="DATE" />
+                <Label layoutX="10.0" layoutY="27.0" text="START" />
+                <Label layoutX="10.0" layoutY="27.0" text="END" />
+            </children>
+        </VBox>
+        <VBox layoutX="465.0" layoutY="27.0" prefHeight="221.0" prefWidth="130.0" spacing="40.0">
+            <children>
+                <ComboBox fx:id="contactCombo" prefWidth="150.0" />
+                <DatePicker fx:id="datePicker" />
+                <ComboBox fx:id="startCombo" prefWidth="150.0" />
+                <ComboBox fx:id="endCombo" layoutX="10.0" layoutY="60.0" prefWidth="150.0" />
+            </children>
+        </VBox>
+        <Button fx:id="exit" layoutX="343.0" layoutY="326.0" mnemonicParsing="false" onAction="#onExit" text="EXIT" />
+    </children>
 </AnchorPane>
