--- a/src/sample/View/dashboard.fxml
+++ b/src/sample/View/dashboard.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
@@ -68,7 +68,13 @@
          </font>
       </Label>
       <Button fx:id="exit" layoutX="523.0" layoutY="643.0" mnemonicParsing="false" onAction="#onExit" text="EXIT" />
-      <TextField fx:id="customerSearch" layoutX="291.0" layoutY="29.0" onAction="#onCustomerSearch" prefHeight="25.0" prefWidth="271.0" promptText="SEARCH" />
-      <TextField fx:id="appointmentSearch" layoutX="291.0" layoutY="338.0" onAction="#onAppointmentSearch" prefHeight="25.0" prefWidth="271.0" promptText="SEARCH" />
+      <Label layoutX="287.0" layoutY="343.0" text="Sort By:" />
+      <HBox alignment="CENTER_LEFT" layoutX="341.0" layoutY="334.0" prefHeight="35.0" prefWidth="221.0" spacing="20.0">
+         <children>
+            <RadioButton fx:id="weekSortRadio" mnemonicParsing="false" text="Week" />
+            <RadioButton fx:id="monthSortRadio" mnemonicParsing="false" text="Month" />
+            <RadioButton fx:id="showAllRadio" alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Show All" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
