--- a/src/sample/View/dashboard.fxml
+++ b/src/sample/View/dashboard.fxml
@@ -2,15 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="614.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.dashboardController">
+<AnchorPane prefHeight="700.0" prefWidth="895.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.dashboardController">
    <children>
       <TableView fx:id="customerTable" layoutX="12.0" layoutY="62.0" prefHeight="200.0" prefWidth="550.0">
         <columns>
@@ -69,17 +68,18 @@
          </font>
       </Label>
       <Button fx:id="exit" layoutX="523.0" layoutY="643.0" mnemonicParsing="false" onAction="#onExit" text="EXIT" />
-      <Label layoutX="287.0" layoutY="343.0" text="Sort By:" />
-      <HBox alignment="CENTER_LEFT" layoutX="341.0" layoutY="334.0" prefHeight="35.0" prefWidth="221.0" spacing="20.0">
+      <VBox alignment="CENTER" layoutX="664.0" layoutY="213.0" prefHeight="290.0" prefWidth="164.0" spacing="30.0">
          <children>
-            <RadioButton fx:id="weekSortRadio" mnemonicParsing="false" onAction="#onWeekRadio" text="Week">
-               <toggleGroup>
-                  <ToggleGroup fx:id="appointmentSortToggle" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="monthSortRadio" mnemonicParsing="false" onAction="#onMonthRadio" text="Month" toggleGroup="$appointmentSortToggle" />
-            <RadioButton fx:id="showAllRadio" alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onShowAllRadio" text="Show All" toggleGroup="$appointmentSortToggle" />
+            <Label text="REPORTS">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Button fx:id="sortedAppointments" mnemonicParsing="false" onAction="#onSortedAppointments" prefHeight="25.0" prefWidth="166.0" text="Sorted Appointments" textAlignment="CENTER" />
+            <Button fx:id="appointmentsByType" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAppointmentsByType" prefHeight="25.0" prefWidth="165.0" text="Appointments by Type" textAlignment="RIGHT" />
+            <Button fx:id="appointmentsByDuration" layoutX="10.0" layoutY="35.0" mnemonicParsing="false" onAction="#onAppointmentsByDuration" prefHeight="25.0" prefWidth="163.0" text="Appointments by Duration" />
+            <Button fx:id="contactSchedules" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onContactSchedules" prefHeight="25.0" prefWidth="164.0" text="Contact Schedules" />
          </children>
-      </HBox>
+      </VBox>
    </children>
 </AnchorPane>
