--- a/src/sample/View/dashboard.fxml
+++ b/src/sample/View/dashboard.fxml
@@ -77,7 +77,7 @@
             </Label>
             <Button fx:id="sortedAppointments" mnemonicParsing="false" onAction="#onSortedAppointments" prefHeight="25.0" prefWidth="166.0" text="Sorted Appointments" textAlignment="CENTER" />
             <Button fx:id="appointmentsByType" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAppointmentsByType" prefHeight="25.0" prefWidth="165.0" text="Appointments by Type" textAlignment="RIGHT" />
-            <Button fx:id="appointmentsByDuration" layoutX="10.0" layoutY="35.0" mnemonicParsing="false" onAction="#onAppointmentsByDuration" prefHeight="25.0" prefWidth="163.0" text="Appointments by Duration" />
+            <Button fx:id="appointmentsByUser" layoutX="10.0" layoutY="35.0" mnemonicParsing="false" onAction="#onAppointmentsByUser" prefHeight="25.0" prefWidth="163.0" text="Appointments by User" />
             <Button fx:id="contactSchedules" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onContactSchedules" prefHeight="25.0" prefWidth="164.0" text="Contact Schedules" />
          </children>
       </VBox>
