--- a/src/sample/View/addCustomerForm.fxml
+++ b/src/sample/View/addCustomerForm.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane prefHeight="450.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.addCustomerController">
    <children>
       <VBox layoutX="14.0" layoutY="36.0" prefHeight="350.0" prefWidth="100.0" spacing="34.0">
@@ -26,7 +25,7 @@
             <TextField fx:id="addressField" layoutX="10.0" layoutY="10.0" />
             <TextField fx:id="postalCodeField" layoutX="10.0" layoutY="35.0" />
             <ComboBox fx:id="countryCombo" onAction="#onCountrySelect" prefWidth="150.0" />
-            <ComboBox fx:id="stateCombo" layoutX="10.0" layoutY="210.0" onAction="#onStateSelect" prefWidth="150.0" />
+            <ComboBox fx:id="stateCombo" layoutX="10.0" layoutY="210.0" prefWidth="150.0" />
             <TextField fx:id="phoneField" />
          </children>
       </VBox>
